<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="#9284AC"
        android:textSize="65sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/Enter_name"
        android:inputType="text"
        android:shadowColor="@color/white"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:width="120dp"
        android:background="#FFAEA6CE"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:width="120dp"
        android:background="#A8C0DC"
        android:text="@string/help"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>