<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".QuestionAnswer">



    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textSize="33sp"
        android:text="@string/helloname" />

    <TextView
        android:id="@+id/questionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="23sp" />

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionNo"
        android:layout_marginStart="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:text="" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="40dp"
        android:layout_below="@id/questions">

        <RadioButton
            android:id="@+id/Btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/bluish"
            android:textSize="23sp"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/Btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/bluish"
            android:textSize="23sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/Btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/bluish"
            android:textSize="23sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/Btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/bluish"
            android:textSize="23sp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#FFAEA6CE"
        android:text="@string/nxtq"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#A8C0DC"
        android:text="@string/quit"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="113dp"
        android:layout_height="25dp"
        android:layout_below="@id/button4"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/your_score"
        android:textColor="#455A64"
        android:textSize="17sp"
        tools:ignore="TextSizeCheck" />


</RelativeLayout>